# argodsm-parsec

./: LICENSE  README  install_inputs.sh  test.sh
bench/: run.sh
blackscholes/bench/: build.sh  run.sh
blackscholes/src/: Makefile  blackscholes-argo.cpp  blackscholes-omp.c  blackscholes-ompss-2-cluster-strong.c  blackscholes-ompss-2-cluster-weak.c  blackscholes-ompss-2-cluster.c  blackscholes-ompss-2.c  blackscholes-ompss.c  blackscholes.c
bodytrack/bench/: build.sh  run.sh
bodytrack/src/: .directory  Makefile.in  config.h.in  configure.ac
canneal/bench/: run.sh
canneal/src/: Makefile  annealer_thread.cpp  main.cpp
common/: wtime.hpp
dedup/bench/: run.sh
dedup/src/: Makefile  dedup.c  encoder.c  hashtable.c  mbuffer.c
facesim/bench/: build.sh  extrae.xml  extrae_openmp.xml  extrae_pthreads.xml  run.sh
facesim/src/: ompss_files.txt  pthreads_files.txt
ferret/bench/: run.sh
ferret/src/: Makefile
fluidanimate/: README.txt
fluidanimate/bench/: run.sh
fluidanimate/src/: Makefile  Makefile.omp  omp-unrrolled-deps.cpp  omp.cpp  omp2.cpp  omp4.cpp  ompss-dataflow.cpp  ompss-multideps-nobar.cpp  ompss-naive.cpp  ompss.cpp  pthreads.cpp  serial.cpp
freqmine/bench/: build.sh  run.sh
freqmine/src/: Makefile  fp_tree.cpp  fpmax.cpp
parseclibs/: README.txt
raytrace/src/: CMakeLists.txt  clean.py
raytrace/src/RTTL/: CMakeLists.txt
streamcluster/bench/: build.sh  run.sh
streamcluster/src/: Makefile  ompss-2-cluster_streamcluster.cpp  ompss_streamcluster-with-all-deps.cpp  ompss_streamcluster.cpp  streamcluster.cpp
swaptions/bench/: run.sh
(+113 files in other folders)
